--- a/src/app/pages/game-room/game-room.component.html
+++ b/src/app/pages/game-room/game-room.component.html
@@ -38,7 +38,7 @@
           <button class="btn btn-primary btn-sm">Rejoindre</button>
           <button class="btn btn-danger btn-sm">Quitter</button>
         </div>
-        <h3 class="text-lg font-bold mb-4">Jeu en cours</h3>
+        <h3 class="text-lg font-bold mb-4">Session en cours</h3>
         <h3 class="text-sm font-bold mb-4 text-red-500">1/2 joueurs</h3>
         <div class="grid grid-cols-2 gap-2">
           <div *ngFor="let player of players" class="flex items-center">
@@ -70,28 +70,44 @@
 
     <div class="flex-grow flex flex-col">
       <!-- Espace interactif du jeu -->
-      <div class="flex-grow bg-base-100 rounded-xl p-4 text-800">
+      <div class="flex-grow bg-base-100 rounded-xl p-4 text-800 ">
         <!-- En-tête pour afficher le nom du jeu -->
         <div class="flex justify-center">
           <h2 class="text-lg font-bold">{{currentGameName}}</h2>
         </div>
         <div class="divider"></div>
-        <!-- Insérer ici le composant interactif du jeu -->
+
+        <br><br><br> <!--Used to center the game. Don't remove-->
+
+        <!-- Composant interactif du jeu (morpion)-->
+        <div class="flex justify-center items-center mt-4">
+          <svg width="300" height="300" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+            <!-- Lignes du morpion -->
+            <line x1="33.33" y1="0" x2="33.33" y2="100" stroke="black" stroke-width="2"/>
+            <line x1="66.67" y1="0" x2="66.67" y2="100" stroke="black" stroke-width="2"/>
+            <line x1="0" y1="33.33" x2="100" y2="33.33" stroke="black" stroke-width="2"/>
+            <line x1="0" y1="66.67" x2="100" y2="66.67" stroke="black" stroke-width="2"/>
+
+            <!-- Symboles X et O -->
+            <!-- Symbole X -->
+          </svg>
+        </div>
 
         <!-- PAD choix-->
-        <div class="flex items-end justify-start mt-4">
-          <div class="grid grid-cols-3 gap-1">
-            <label *ngFor="let key of sortedMorpionKeys" class="border-2 border-gray-300 bg-white p-4 flex justify-center items-center rounded-md">
-              <input type="radio" name="radio-1" class="radio radio-xs" [checked]="key === selectedCase" [disabled]="getDisabledState(key)" (click)="selectCase(key)" />
-            </label>
+        <ng-container *ngIf="isStarted" >
+          <div class="flex items-end justify-start mt-4">
+            <div class="grid grid-cols-3 gap-1">
+              <label *ngFor="let key of sortedMorpionKeys" class="border-2 border-gray-300 bg-white p-4 flex justify-center items-center rounded-md">
+                <input type="radio" name="radio-1" class="radio radio-xs" [checked]="key === selectedCase" [disabled]="getDisabledState(key)" (click)="selectCase(key)" />
+              </label>
+            </div>
           </div>
-        </div>
 
-        <!-- Bouton "Jouer cette case" -->
-        <div class="mt-4 flex justify-start">
-          <button class="btn btn-neutral" [disabled]="selectedCase === null" (click)="jouerCetteCase()">Jouer cette case</button>
-        </div>
-
+          <!-- Bouton "Jouer cette case" -->
+          <div class="mt-4 flex justify-start">
+            <button class="btn btn-neutral" [disabled]="selectedCase === null" (click)="jouerCetteCase()">Jouer cette case</button>
+          </div>
+        </ng-container>
       </div>
 
       <!--Tchat messages -->
@@ -107,6 +123,6 @@
 
   <!-- Footer -->
   <div class="p-4 bg-base-300 text-gray-800 flex justify-center">
-    <button class="btn btn-primary">Lancer jeu</button>
+    <button class="btn btn-primary" [disabled]="!canBeLaunched">Lancer jeu</button>
   </div>
 </div>
